--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@
 
 
  #menu-bar {
-              width: 98%;
+              width: 100%;
               margin: 0px 0px 0px 0px;
               padding: 5px 8px 6px 9px;
               height: 40px;
@@ -23,7 +23,7 @@
     }
   #menu-bar li {
                 margin: 0px 0px 6px 0px;
-                padding: 2px 160px 0px 0px;
+                padding: 2px 80px 0px 0px;
                 float: left;
                 position: relative;
                 list-style: none;
@@ -107,6 +107,7 @@ html, body {height:100%;}
 	position:relative;
 	min-height:100%;
 	
+	
 }
 
 footer{
@@ -148,6 +149,7 @@ footer p{
     height:670px;
     clear:both;
     display: inline-block; 
+    margin-left: 100px;
 }
 
 .conteudo h2,p {
@@ -156,6 +158,7 @@ footer p{
 
 .conteudo p{
     margin-top:30px;
+    text-align: center;
     
 }
 
@@ -167,12 +170,14 @@ footer p{
     margin-left:550px;
     margin-top:50px;
 }
+  
 
 .cadastro{
     font-weight: bold;
     font-family: arial;
     font-style: normal;
     margin-top:10px;
+    margin-right: 30px;
     
 }
 
@@ -191,6 +196,9 @@ footer p{
     font-style: normal;
     margin-top:10px;
     
+    
+    
+    
 }
 
 #feed{
@@ -198,4 +206,24 @@ footer p{
     font-family: arial;
     font-style: normal;
     margin-top:10px;
+    
 }
+
+#sobre{
+    font-size: 20px;
+    font-family: fantasy;
+    
+}
+
+.inicio{
+   font-family: fantasy;
+   font-size: 25px;
+   color: black;
+}
+
+#front{
+    font-family: cursive;
+    color: white;
+}
+    
+    
