Criação e integração do banco de de dados, validação se está logado ou não. Login e senha do administrador é: Login - adm, Senha - adm

--- a/estilo.css
+++ b/estilo.css
@@ -219,3 +219,15 @@ label{
 }
     
     
+.links{
+    text-decoration:none;
+    color:black;
+    text-shadow: 2px 2px 3px #000000;
+     margin-left: 10px
+}
+
+#include{
+    text-decoration:none;
+    color:black;
+    text-shadow: 2px 2px 3px #000000;
+}
